flux/clusters/pinkdiamond/flux-system/sealed-secrets.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sealed-secrets
  namespace: flux-system
spec:
  parentRefs:
    - name: haproxy
      namespace: haproxy-ingress
  hostnames:
    - sealed-secrets.thecluster.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sealed-secrets-controller
          port: 8080
