flux/clusters/pinkdiamond/flux-system/network-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-cloudflare-tunnel
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app: notification-controller
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudflare-system
